# reharm-studio

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md
.github/workflows/: release.yml
.tmp/: design.md  requirements.md  tasks.md  test_design.md
Assets/: AppIcon.small.source.html  AppIcon.source.html
Experiments/: PresetSwitchTest.cpp
Source/: AnalysisStrip.cpp  AnalysisStrip.h  AudioEngine.cpp  AudioEngine.h  ChordEditorPanel.cpp  ChordEditorPanel.h  ChordModel.cpp  ChordModel.h  ChordProgressionGenerator.cpp  ChordProgressionGenerator.h  ChordTheory.cpp  ChordTheory.h  DisplayState.h  HarmonyAnalyzer.cpp  HarmonyAnalyzer.h  HeaderBar.cpp  HeaderBar.h  Localization.h  Main.cpp  MainComponent.cpp  MainComponent.h  MidiExporter.cpp  MidiExporter.h  PlaybackBuilder.cpp  PlaybackBuilder.h  PlaybackSettings.h  PluginLoadTest.cpp  ProgressionModel.cpp  ProgressionModel.h  SequencerView.cpp  SequencerView.h  StateStore.cpp  StateStore.h  Theme.cpp  Theme.h  TransportBar.cpp  TransportBar.h  UndoHistory.h
Tests/: AudioEngineTest.cpp  ChordModelTest.cpp  ChordProgressionGeneratorTest.cpp  ChordProgressionTest.cpp  ChordTheoryTest.cpp  HarmonyAnalyzerTest.cpp  MidiExporterTest.cpp  PlaybackBuilderTest.cpp  ProgressionModelTest.cpp  StateStoreTest.cpp  TestRunner.cpp  TimingTest.cpp  UndoHistoryTest.cpp
